--- a/Admin28/Views/Calls/Edit.cshtml
+++ b/Admin28/Views/Calls/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Admin28.Models.JC_HC_CURENT
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Call";
 }
 
-<h2>Edit</h2>
+<h2>Edit Call &ndash; <span class="text-danger">DO NOT USE</span></h2>
 
 
 @using (Html.BeginForm())
@@ -175,7 +175,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-danger disabled" disabled="disabled" />
             </div>
         </div>
     </div>
