--- a/Admin28/Views/Calls/Create.cshtml
+++ b/Admin28/Views/Calls/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Admin28.Models.JC_HC_CURENT
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Call Creation";
 }
 
-<h2>Create</h2>
+<h2>Call Creation &ndash; <span class="text-danger">DO NOT USE</span></h2>
 
 
 @using (Html.BeginForm()) 
@@ -193,7 +193,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="DO NOT USE" class="btn btn-danger disabled" disabled="disabled" />
             </div>
         </div>
     </div>
