--- a/Admin28/Views/Subscriptions/Index.cshtml
+++ b/Admin28/Views/Subscriptions/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
+<table class="table table-bordered table-condensed table-hover" id="paged">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.ID)
